# Erbium

./: Cargo.toml  README.md
.github/workflows/: index.html
config/: network.toml
core/: Cargo.toml
core/src/: block.rs  chain.rs  lib.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
node/: Cargo.toml
node/src/: main.rs
p2p/: Cargo.toml
p2p/src/: lib.rs
src/: main.rs
src/core/: block.rs  chain.rs  genesis.rs  mod.rs  state.rs  transaction.rs
src/core/consensus/: block_time.rs  edfm.rs  mod.rs  validator.rs
src/crypto/: hash.rs  keys.rs  mod.rs
src/node/: config.rs  mod.rs  runner.rs
src/p2p/: message.rs  mod.rs  service.rs  sync.rs
src/storage/: db.rs  mod.rs
