# Cargo.toml

[package]
name = "erbium-node"
version = "0.1.0"
edition = "2024"

[dependencies]
# Serde is a framework for serializing and deserializing Rust data structures efficiently.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SHA-2 is a widely used cryptographic hash function. We'll use SHA-256.
sha2 = "0.10"
rocksdb = "0.22.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
secp256k1 = { version = "0.29.0", features = ["rand-std", "serde"] }
rand = "0.8"
hex = "0.4.3"
