[package]
name = "erbium-node"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Internal Workspace Dependencies ---
erbium-core = { path = "../core" }
erbium-p2p = { path = "../p2p" }
erbium-crypto = { path = "../crypto" }

# --- External Dependencies ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53", features = ["tcp", "gossipsub", "mdns", "yamux", "noise", "tokio", "macros", "request-response"] }
async-trait = "0.1"
hex = "0.4" 