[package]
name = "erbium-p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Internal Workspace Dependencies ---
erbium-core = { path = "../core" }

# --- External Dependencies ---
libp2p = { version = "0.53", features = ["tcp", "gossipsub", "mdns", "yamux", "noise", "tokio", "macros", "request-response"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"